--- a/app/src/main/res/layout/deskripsi_produk.xml
+++ b/app/src/main/res/layout/deskripsi_produk.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Deskripsi">
 
     <View
         android:id="@+id/view"
-        android:layout_width="414dp"
-        android:layout_height="108dp"
+        android:layout_width="320dp"
+        android:layout_height="71dp"
         android:background="@drawable/cvec"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,97 +26,12 @@
 
     <View
         android:id="@+id/view5"
-        android:layout_width="269dp"
-        android:layout_height="242dp"
-        android:layout_marginTop="108dp"
+        android:layout_width="216dp"
+        android:layout_height="179dp"
+        android:layout_marginTop="76dp"
         android:background="@drawable/kricu_stik_telur_cumi_2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.373"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="364dp"
-        android:fontFamily="@font/inter_bold"
-        android:text="@string/kricu"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.325"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="448dp"
-        android:fontFamily="@font/inter_bold"
-        android:text="@string/deskripsi"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.164"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="345dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="484dp"
-        android:fontFamily="@font/inter_regular"
-        android:text="Kricu Stik Telur Cumi"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.818"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="345dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="508dp"
-        android:fontFamily="@font/inter_regular"
-        android:text="Berat packing: 250 Gram | Berat bersih: 200 Gram"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.818"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="345dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="540dp"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="@font/inter_regular"
-        android:text="Harga: Rp 38.000"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/view"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="328dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="568dp"
-        android:fontFamily="@font/inter_regular"
-        android:text="Komposisi: Telor Cumi, Sagu, Penyedap Rasa, dan Minyak Sayur"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.638"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -125,52 +39,140 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="404dp"
+        android:layout_marginTop="284dp"
         android:fontFamily="@font/inter_bold"
         android:text="@string/harga"
         android:textColor="#048C11"
-        android:textSize="24sp"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.196"
+        app:layout_constraintHorizontal_bias="0.142"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="316dp"
+        android:fontFamily="@font/inter_bold"
+        android:text="@string/deskripsi"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.127"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="264dp"
+        android:fontFamily="@font/inter_bold"
+        android:text="@string/kricu"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.215"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="285dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="364dp"
+        android:fontFamily="@font/inter_regular"
+        android:text="@string/berat"
+        android:textColor="@color/black"
+        android:textSize="11sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.942"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="261dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="384dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/inter_regular"
+        android:text="@string/hh"
+        android:textColor="@color/black"
+        android:textSize="11sp"
+        app:layout_constraintEnd_toEndOf="@+id/view"
+        app:layout_constraintHorizontal_bias="0.767"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="264dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="400dp"
+        android:fontFamily="@font/inter_regular"
+        android:text="@string/komp"
+        android:textColor="@color/black"
+        android:textSize="11sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.589"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="226dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="340dp"
+        android:fontFamily="@font/inter_regular"
+        android:text="@string/kricu"
+        android:textColor="@color/black"
+        android:textSize="11sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.351"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="203dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="620dp"
-        android:background="@drawable/tombol"
-        android:text="Beli sekarang"
+        android:id="@+id/bb"
+        android:layout_width="158dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="440dp"
+        android:background="@drawable/vbuy"
+        android:text="@string/tombol"
+        android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        app:backgroundTint="@drawable/tombol"
-        app:backgroundTintMode="add"
+        android:textSize="14sp"
+        app:backgroundTint="#0384F4"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button4"
-        android:layout_width="58dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="404dp"
-        android:background="@drawable/stok"
-        app:backgroundTint="@drawable/stock"
+        android:id="@+id/badd"
+        android:layout_width="61dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="293dp"
+        android:background="@drawable/vadd"
+        app:backgroundTint="#0384F4"
+        app:iconTint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.912"
+        app:layout_constraintHorizontal_bias="0.945"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button5"
-        android:layout_width="52dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="24dp"
+        android:id="@+id/bback"
+        android:layout_width="35dp"
+        android:layout_height="23dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/vback"
-        app:backgroundTint="@drawable/vback"
+        app:backgroundTint="#393737"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
